--- a/multilang_site/main/templates/articles.html
+++ b/multilang_site/main/templates/articles.html
@@ -17,7 +17,7 @@
 
     <div class="article-container">
         <h1>{% trans "All the articles" %}</h1>
-        <p>{% trans "Discover all our blog articles" %}</p>
+        <p style="text-align: center;">{% trans "Discover all our blog articles" %}</p>
 
         {% for article in articles %}
         <article>
