--- a/main/templates/header.html
+++ b/main/templates/header.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
+<!-- Grant access to internationalization  and static file handling -->
 {% load i18n %}
 {% load static %}
 <html lang="{{ LANGUAGE_CODE }}">
 
 <header>
-        <h1 style="color: white;">Multilang Site</h1>
+    <h1 style="color: white;">Multilang Site</h1>
     <div class="language-switcher">
         <form action="{% url 'set_language' %}" method="post" class="flex items-center">
-            {% csrf_token %}
+            {% csrf_token %} <!-- Security token  -->
             <input name="next" type="hidden" value="{{ redirect_to }}">
             {% get_current_language as LANGUAGE_CODE %}
             {% get_available_languages as LANGUAGES %}
             {% get_language_info_list for LANGUAGES as languages %}
-            
+
             <button type="submit" name="language" value="en">
                 <img src="{% static 'img/uk_flag.png' %}" alt="English language">
             </button>
@@ -21,5 +22,6 @@
                 <img src="{% static 'img/fr_flag.png' %}" alt="Langue française">
             </button>
         </form>
+
     </div>
 </header>
